# course_tracker

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
course_tracker/: manage.py
course_tracker/course_tracker/: asgi.py  settings.py  urls.py  views.py  wsgi.py
course_tracker/courses/: forms.py  models.py  tests.py  urls.py  views.py
course_tracker/courses/migrations/: 0001_initial.py  0002_course_created_at_course_updated_at.py  0003_course_author.py  0004_course_public.py
course_tracker/fixtures/: data.json  fixture_loader.py  sample.json  user_data.json
course_tracker/tasks/: models.py  tests.py  urls.py  views.py
course_tracker/tasks/migrations/: 0001_initial.py  0002_task_course.py  0003_alter_task_status.py  0004_alter_task_course_alter_task_status.py  0005_alter_task_course.py
course_tracker/templates/: form.html  index.html
course_tracker/templates/courses/: course_detail.html  course_list.html
course_tracker/templates/layout/: base.html
course_tracker/templates/tasks/: task_detail.html  task_list.html
course_tracker/users/: forms.py  mixins.py  tests.py  urls.py  views.py
course_tracker/users/migrations/: 0001_initial.py
